# o11y-otel-instrumentation

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.gateway  Makefile  README.md  conanfile.py  docker-compose.yml  docker.mk
common/: CMakeLists.txt
common/include/: CMakeLists.txt
common/include/notshell/common/: config_parser.h  http_helper.h  services.h
common/include/notshell/common/controller/: RestController.h
common/include/notshell/common/mappers/: json_mappers.h  object_mappers.h
common/include/notshell/common/mappers/odb/: odb_pgsql_mappers.h
common/include/notshell/common/model/: IJsonConvertible.h
common/include/notshell/common/model/dto/: UserDto.h
common/include/notshell/common/observability/: logging_commons.h  metrics_commons.h  tracer_commons.h
common/src/: CMakeLists.txt  commons.cc  mappers.cc  observability.cc  services.cc
config/: CMakeLists.txt
config/cmake/: project_config.h.in
config/conan_profiles/: linux  linux_x86_64  linux_x86_64_gcc_12_3_CXX03_ABI  linux_x86_64_gcc_9_4_CXX03_ABI  windows  windows_x86_64  windows_x86_64_vs2022
config/conan_profiles/conan2/: otel_fix  windows  windows_x86_64  windows_x86_64_msvc194
config/make/: config.mk  linux.mk  windows.mk
config/o11y/: obs-config-gateway.yml  obs-config-user.yml
gateway/: CMakeLists.txt
gateway/include/: CMakeLists.txt
gateway/include/notshell/gateway/controller/: UserController.h
gateway/include/notshell/gateway/service/: GrpcUserService.h  IUserService.h
gateway/src/: CMakeLists.txt  controllers.cc  main.cc  services.cc
helm/: Chart.yaml  values.yaml
helm/templates/: collector-svc.yaml  deployment-collector.yaml  deployment-gateway.yaml  deployment-user.yaml  gateway-svc.yaml  user-manager-svc.yaml
protos/: CMakeLists.txt  User.proto
test/: http-client.env.json  user_tests.http
user_manager/: CMakeLists.txt
user_manager/include/: CMakeLists.txt
user_manager/include/notshell/user_manager/dao/: IUserDao.h  InMemoryUserDao.h  OdbUserDao.h
user_manager/include/notshell/user_manager/model/: User.h
user_manager/include/notshell/user_manager/model/orm/: user_orm.h
user_manager/include/notshell/user_manager/service/: UserService.h
user_manager/odb/: CMakeLists.txt
user_manager/src/: CMakeLists.txt  InMemoryUserDao.cc  OdbUserDao.cc  UserService.cc  main.cc  mappers.cc
